--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
 <span aria-hidden="true" class="dot"></span>
 </div>
 <div>
-<a a="" hrefs.htmlcostings<="">
-<a a="" href="implementations.htm" tions<="">
-</a></a></div>
-</nav>
 
 <div class="hero">
 <div class="hero-grid">
@@ -108,7 +104,7 @@
 <footer>
 <p class="note">
       © <span id="year"></span> Inclusivity in Sport • Built by Hamzah Khan
-      • implementations.htmImplementations • costings.htmlCostings
+       href="implementations.html" Implementations
 </p>
 </footer>
 <script>
