--- a/index.html
+++ b/index.html
@@ -109,4 +109,4 @@
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 
-</figure></div></div></head></html><body><div><a href="costings.html" style="display:inline-block; padding:10px; margin:5px; background-color:#007BFF; color:white; text-decoration:none; border-radius:5px;">Costings</a><a href="implementations.htm" style="display:inline-block; padding:10px; margin:5px; background-color:#28A745; color:white; text-decoration:none; border-radius:5px;">Implementation</a></div></body>
+</figure></div></div></head></html><body><div><a href="costings.html" style="display:inline-block; padding:10px; margin:5px; background-color:#007BFF; color:white; text-decoration:none; border-radius:5px;">Costings</a><a href="implementations.htm" style="display:inline-block; padding:10px; margin:5px; background-color:#28A745; color:white; text-decoration:none; border-radius:5px;">href="implementations.html"Implementation</a></div></body>
