--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <span aria-hidden="true" class="dot"></span>
 </div>
 <div>
+<a a="" hrefs.htmlcostings<="">
+<a a="" href="implementations.htm" tions<="">
+</a></a></div>
+</nav>
 
 <div class="hero">
 <div class="hero-grid">
@@ -22,7 +26,10 @@
           Identifying barriers and showcasing strategies that respect faith, modesty,
           and community while increasing access and agency.
         </p>
-
+<div aria-label="Quick links" class="grid grid-2" role="group">
+          implementations.htmView Implementations →
+          costings.htmlSee Costings →
+</div>
 </div>
 <figure class="hero-media">
 <!-- Using the exact filename you mentioned -->
@@ -101,7 +108,7 @@
 <footer>
 <p class="note">
       © <span id="year"></span> Inclusivity in Sport • Built by Hamzah Khan
-       href="implementations.html" Implementations
+      • implementations.htmImplementations • costings.htmlCostings
 </p>
 </footer>
 <script>
@@ -109,4 +116,4 @@
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 
-</figure></div></div></head></html><body><div><a href="costings.html" style="display:inline-block; padding:10px; margin:5px; background-color:#007BFF; color:white; text-decoration:none; border-radius:5px;">Costings</a><a href="implementations.htm" style="display:inline-block; padding:10px; margin:5px; background-color:#28A745; color:white; text-decoration:none; border-radius:5px;">href="implementations.html"Implementation</a></div></body>
+</figure></div></div></head></html><body><div><a href="costings.html" style="display:inline-block; padding:10px; margin:5px; background-color:#007BFF; color:white; text-decoration:none; border-radius:5px;">Costings</a><a href="implementations.htm" style="display:inline-block; padding:10px; margin:5px; background-color:#28A745; color:white; text-decoration:none; border-radius:5px;">Implementation</a></div></body>
