--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </div>
 <div>
 <a a="" hrefs.htmlcostings<="">
-<a a="" href="implementations.htm" tions<="">
+<a a="" href="implementations.html" tions<="">
 </a></a></div>
 </nav>
 
@@ -27,7 +27,7 @@
           and community while increasing access and agency.
         </p>
 <div aria-label="Quick links" class="grid grid-2" role="group">
-          implementations.htmView Implementations →
+          implementations.htmlView Implementations →
           costings.htmlSee Costings →
 </div>
 </div>
@@ -108,7 +108,7 @@
 <footer>
 <p class="note">
       © <span id="year"></span> Inclusivity in Sport • Built by Hamzah Khan
-      • implementations.htmImplementations • costings.htmlCostings
+      • implementations.htmlImplementations • costings.htmlCostings
 </p>
 </footer>
 <script>
@@ -116,4 +116,4 @@
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 
-</figure></div></div></head></html><body><div><a href="costings.html" style="display:inline-block; padding:10px; margin:5px; background-color:#007BFF; color:white; text-decoration:none; border-radius:5px;">Costings</a><a href="implementations.htm" style="display:inline-block; padding:10px; margin:5px; background-color:#28A745; color:white; text-decoration:none; border-radius:5px;">Implementation</a></div></body>
+</figure></div></div></head></html><body><div><a href="costings.html" style="display:inline-block; padding:10px; margin:5px; background-color:#007BFF; color:white; text-decoration:none; border-radius:5px;">Costings</a><a href="implementations.html" style="display:inline-block; padding:10px; margin:5px; background-color:#28A745; color:white; text-decoration:none; border-radius:5px;">Implementation</a></div></body>
