--- a/index.html
+++ b/index.html
@@ -1,119 +1,242 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>Religious Beliefs and Inclusivity in Sports</title>
-<!-- Modern, accessible color palette and typography --><link <header="" href="" skip-link"=""/>
-<nav aria-label="Primary" class="nav">
-<div class="brand">
-<span aria-hidden="true" class="dot"></span>
-</div>
-<div>
-<a a="" hrefs.htmlcostings<="">
-<a a="" href="implementations.html" tions<="">
-</a></a></div>
-</nav>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Religious Beliefs and Inclusivity in Sports</title>
+  <link rel="stylesheet" href="styles.css"/>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      line-height: 1.6;
+    }
 
-<div class="hero">
-<div class="hero-grid">
-<div class="hero-card">
-<span class="eyebrow">Project focus • Inclusivity</span>
-<h1>How religious beliefs affect sport participation — and how to make sport more inclusive</h1>
-<p class="lead">
-          Exploring how beliefs—particularly within Islam—shape participation in sport.
-          Identifying barriers and showcasing strategies that respect faith, modesty,
-          and community while increasing access and agency.
-        </p>
-<div aria-label="Quick links" class="grid grid-2" role="group">
-          implementations.htmlView Implementations →
-          costings.htmlSee Costings →
-</div>
-</div>
-<figure class="hero-media">
-<!-- Using the exact filename you mentioned -->
-<img <="" alt="A group of Muslim women training in a boxing class, demonstrating inclusive sporting practice." div="" src="imagesboxing-group.jpg"/>
-<main id="main">
-<section aria-labelledby="intro">
-<h2 id="intro">Introduction &amp; Aims</h2>
-<p>
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem 2rem;
+      background-color: #222;
+      color: white;
+    }
+
+    .nav a {
+      color: white;
+      margin-left: 1rem;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .nav a:hover {
+      text-decoration: underline;
+    }
+
+    .hero {
+      background-color: #f4f4f4;
+      padding: 2rem;
+    }
+
+    .hero-card {
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .hero-card .eyebrow {
+      text-transform: uppercase;
+      font-size: 0.8rem;
+      color: #555;
+    }
+
+    .lead {
+      font-size: 1.2rem;
+      margin-bottom: 1rem;
+    }
+
+    .grid {
+      display: grid;
+      gap: 1rem;
+    }
+
+    .grid-2 {
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    }
+
+    .grid-2 a {
+      display: inline-block;
+      padding: 10px;
+      text-align: center;
+      border-radius: 5px;
+      text-decoration: none;
+      color: white;
+      font-weight: bold;
+    }
+
+    .grid-2 a:first-child {
+      background-color: #28A745;
+    }
+
+    .grid-2 a:last-child {
+      background-color: #007BFF;
+    }
+
+    main {
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    footer {
+      background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+
+    footer a {
+      color: #4FC3F7;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 2rem auto;
+      border-radius: 10px;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Navigation -->
+  <nav aria-label="Primary" class="nav">
+    <div class="brand">
+      <span aria-hidden="true" class="dot">●</span> Inclusivity in Sport
+    </div>
+    <div>
+      <a href="implementations.html">Implementations</a>
+      <a href="costings.html">Costings</a>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-card">
+      <span class="eyebrow">Project focus • Inclusivity</span>
+      <h1>How religious beliefs affect sport participation — and how to make sport more inclusive</h1>
+      <p class="lead">
+        Exploring how beliefs—particularly within Islam—shape participation in sport.
+        Identifying barriers and showcasing strategies that respect faith, modesty,
+        and community while increasing access and agency.
+      </p>
+      <div aria-label="Quick links" class="grid grid-2" role="group">
+        <a href="implementations.html">View Implementations →</a>
+        <a href="costings.html">See Costings →</a>
+      </div>
+    </div>
+    <figure class="hero-media">
+      <img src="images/boxing-group.jpg" alt="A group of Muslim women training in a boxing class, demonstrating inclusive sporting practice.">
+    </figure>
+  </section>
+
+  <!-- Main Content -->
+  <main id="main">
+    <section aria-labelledby="intro">
+      <h2 id="intro">Introduction &amp; Aims</h2>
+      <p>
         This project explores how religious beliefs, particularly within Islam, influence participation in sports.
         It aims to identify barriers and propose inclusive strategies that respect religious values while promoting
         active engagement.
       </p>
-</section>
-<section aria-labelledby="context">
-<h2 id="context">Context</h2>
-<ul>
-<li>Modesty requirements (e.g., hijab, long sleeves)</li>
-<li>Gender segregation in physical activities</li>
-<li>Lack of representation (few Muslim female coaches)</li>
-<li><strong>Example:</strong> <em>Muslim Women Boxing Initiative</em> – empowering Muslim women through culturally sensitive boxing programs</li>
-</ul>
-</section>
-<section aria-labelledby="critical">
-<h2 id="critical">Critical Theory and Sport</h2>
-<p>
+    </section>
+
+    <section aria-labelledby="context">
+      <h2 id="context">Context</h2>
+      <ul>
+        <li>Modesty requirements (e.g., hijab, long sleeves)</li>
+        <li>Gender segregation in physical activities</li>
+        <li>Lack of representation (few Muslim female coaches)</li>
+        <li><strong>Example:</strong> <em>Muslim Women Boxing Initiative</em> – empowering Muslim women through culturally sensitive boxing programs</li>
+      </ul>
+    </section>
+
+    <section aria-labelledby="critical">
+      <h2 id="critical">Critical Theory and Sport</h2>
+      <p>
         Critical theory helps examine power structures and cultural norms in sport. It promotes
         <strong>agency</strong>—the ability to act independently and make choices—especially for marginalized groups.
       </p>
-<ul>
-<li>Challenges dominant ideologies</li>
-<li>Focuses on empowerment and cultural transformation</li>
-<li>More agency-oriented than functionalism or conflict theory</li>
-</ul>
-</section>
-<section aria-labelledby="agency">
-<h2 id="agency">Agency</h2>
-<p>Agency refers to the capacity of individuals to act independently. In sport, it means:</p>
-<ul>
-<li>Muslim women choosing to participate despite societal pressures</li>
-<li>Creating inclusive spaces and programs</li>
-<li>Having Muslim female coaches who advocate for their communities</li>
-</ul>
-</section>
-<section aria-labelledby="tenets">
-<h2 id="tenets">Major Tenets of Critical Theory in Sport</h2>
-<ul>
-<li>Power and inequality in sport</li>
-<li>Cultural hegemony and marginalization</li>
-<li>Resistance and social change</li>
-<li>Sport as a space for identity and interaction</li>
-</ul>
-</section>
-<section aria-labelledby="beyond">
-<h2 id="beyond">Beyond Exploitation</h2>
-<p>
+      <ul>
+        <li>Challenges dominant ideologies</li>
+        <li>Focuses on empowerment and cultural transformation</li>
+        <li>More agency-oriented than functionalism or conflict theory</li>
+      </ul>
+    </section>
+
+    <section aria-labelledby="agency">
+      <h2 id="agency">Agency</h2>
+      <p>Agency refers to the capacity of individuals to act independently. In sport, it means:</p>
+      <ul>
+        <li>Muslim women choosing to participate despite societal pressures</li>
+        <li>Creating inclusive spaces and programs</li>
+        <li>Having Muslim female coaches who advocate for their communities</li>
+      </ul>
+    </section>
+
+    <section aria-labelledby="tenets">
+      <h2 id="tenets">Major Tenets of Critical Theory in Sport</h2>
+      <ul>
+        <li>Power and inequality in sport</li>
+        <li>Cultural hegemony and marginalization</li>
+        <li>Resistance and social change</li>
+        <li>Sport as a space for identity and interaction</li>
+      </ul>
+    </section>
+
+    <section aria-labelledby="beyond">
+      <h2 id="beyond">Beyond Exploitation</h2>
+      <p>
         Critical theory moves beyond seeing athletes as exploited labor. It views sport as a site for resistance,
         expression, and transformation.
       </p>
-</section>
-<section aria-labelledby="culture">
-<h2 id="culture">Shaped by Interactions / Shaping Wider Culture</h2>
-<p>
+    </section>
+
+    <section aria-labelledby="culture">
+      <h2 id="culture">Shaped by Interactions / Shaping Wider Culture</h2>
+      <p>
         Sport is both influenced by and influences culture. Inclusive practices can reshape societal views on
         Muslim women in sport.
       </p>
-</section>
-<section aria-labelledby="change">
-<h2 id="change">Potential for Change</h2>
-<ul>
-<li>Policy reforms (e.g., allowing religious attire)</li>
-<li>Community initiatives (e.g., boxing programs)</li>
-<li>Representation and leadership (e.g., Muslim female coaches)</li>
-</ul>
-</section>
-</main>
-<footer>
-<p class="note">
+    </section>
+
+    <section aria-labelledby="change">
+      <h2 id="change">Potential for Change</h2>
+      <ul>
+        <li>Policy reforms (e.g., allowing religious attire)</li>
+        <li>Community initiatives (e.g., boxing programs)</li>
+        <li>Representation and leadership (e.g., Muslim female coaches)</li>
+      </ul>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer>
+    <p class="note">
       © <span id="year"></span> Inclusivity in Sport • Built by Hamzah Khan
-      • implementations.htmlImplementations • costings.htmlCostings
-</p>
-</footer>
-<script>
-    // Set current year
+      • <a href="implementations.html">Implementations</a>
+      • <a href="costings.html">Costings</a>
+    </p>
+  </footer>
+
+  <script>
+    // Dynamically set current year
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
-
-</figure></div></div></head></html><body><div><a href="costings.html" style="display:inline-block; padding:10px; margin:5px; background-color:#007BFF; color:white; text-decoration:none; border-radius:5px;">Costings</a><a href="implementations.html" style="display:inline-block; padding:10px; margin:5px; background-color:#28A745; color:white; text-decoration:none; border-radius:5px;">Implementation</a></div></body>
+</body>
+</html>
