--- a/costings.html
+++ b/costings.html
@@ -50,7 +50,7 @@
             <td>6,000</td>
         </tr>
         <tr>
-            <td>Marketing & Outreach</td>
+            <td>Marketing &amp; Outreach</td>
             <td>800</td>
         </tr>
         <tr>
@@ -69,8 +69,12 @@
         <li>Community Donations: £2,000</li>
         <li>Participant Fees: £3,000</li>
         <li>Sponsorships: £2,000</li>
+        <li><strong>Sport England Small Grants Programme:</strong> £300–£15,000 (Applied)</li>
     </ul>
 
-    <p><strong>Net Balance:</strong> £0 (Break-even)</p>
+    <p><strong>Net Balance:</strong> £0 (Break-even, pending grant approval)</p>
+
+    <p><a href="https://www.sportengland.org/funding-and-campaigns/our-funding/historic-funds/small-grants-programme#about-the-fund-32554" targetre about Sport England Small Grants Programme
+    </a></p>
 </body>
 </html>
