--- a/costings.html
+++ b/costings.html
@@ -26,6 +26,13 @@
         th {
             background-color: #e0f7fa;
         }
+        img {
+            display: block;
+            margin: 20px auto;
+            max-width: 600px;
+            height: auto;
+            border-radius: 8px;
+        }
     </style>
 </head>
 <body>
@@ -69,12 +76,10 @@
         <li>Community Donations: £2,000</li>
         <li>Participant Fees: £3,000</li>
         <li>Sponsorships: £2,000</li>
+        <li><strong>Crowdfunding via Crowdfunder:</strong> Applied (<a href="https://www.crowdfunder.co.uk/sports/boxing" target)</li>
         <li><strong>Sport England Small Grants Programme:</strong> £300–£15,000 (Applied)</li>
     </ul>
 
-    <p><strong>Net Balance:</strong> £0 (Break-even, pending grant approval)</p>
+    <p><strong>Net Balance:</strong> £0 (Break-even, pending grant and crowdfunding approval)</p>
 
-    <p><a href="https://www.sportengland.org/funding-and-campaigns/our-funding/historic-funds/small-grants-programme#about-the-fund-32554" targetre about Sport England Small Grants Programme
-    </a></p>
-</body>
-</html>
+    <img src="1753788611_boxing_(3)_1008x1008.png" alt>
