--- a/costings.html
+++ b/costings.html
@@ -76,10 +76,10 @@
         <li>Community Donations: £2,000</li>
         <li>Participant Fees: £3,000</li>
         <li>Sponsorships: £2,000</li>
-        <li><strong>Crowdfunding via Crowdfunder:</strong> Applied (<a href="https://www.crowdfunder.co.uk/sports/boxing" target)</li>
+        <li><strong>Crowdfunding via Crowdfunder:</strong> Applied (<a href="https://www.crowdfunder.co.uk/sports/w Campaign</a>)</li>
         <li><strong>Sport England Small Grants Programme:</strong> £300–£15,000 (Applied)</li>
     </ul>
 
     <p><strong>Net Balance:</strong> £0 (Break-even, pending grant and crowdfunding approval)</p>
 
-    <img src="1753788611_boxing_(3)_1008x1008.png" alt>
+    <h3>Crowdfunding Success Examples</h3>
