--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
   <!-- Main Content -->
   <main id="main">
-    <!-- Existing sections remain unchanged -->
+    <!-- Your existing sections remain unchanged -->
   </main>
 
   <!-- Footer -->
