--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Religious Beliefs and Inclusivity in Sports</title>
-  <link rel="stylesheet" hrefdy {
+  <link rel="  <style>
+    body {
       font-family: Arial, sans-serif;
       margin: 0;
       line-height: 1.6;
@@ -78,3 +79,54 @@
 
     /* Button Colours */
     .grid-2 a:nth-child(1) { background-color: #28A745; } /* Green */
+    .grid-2 a:nth-child(2) { background-color: #007BFF; } /* Blue */
+    .grid-2 a:nth-child(3) { background-color: #FF9800; } /* Orange */
+    .grid-2 a:nth-child(4) { background-color: #6A1B9A; } /* Purple */
+    .grid-2 a:nth-child(5) { background-color: #009688; } /* Teal */
+
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 2rem auto;
+      border-radius: 10px;
+    }
+
+    footer {
+      background-color: #222;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+      font-size: 0.9rem;
+    }
+
+    footer a {
+      color: #4FC3F7;
+      text-decoration: none;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Navigation -->
+  <nav aria-label="Primary" class="nav">
+    <div class="brand">
+      <span aria-hidden="true" class="dot">●</span> Inclusivity in Sport
+    </div>
+    <div>
+      implementations.htmlImplementations</a>
+      <a href="costings.html">Costings</a>
+sion_and_Policy.htmlPolicy Context</a>
+      Logic_Model_Table.htmlLogic Model</a>
+      Monitoring_Evaluation_Framework.htmlMonitoring & Evaluation</a>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <div class="hero-card">
+      <span class="eyebrow">Project focus • Inclusivity</span>
