--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Religious Beliefs and Inclusivity in Sports</title>
-  <link rel="stylesheet" href="styles.css"/>
+  styles.css
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -40,6 +41,7 @@
     .hero-card {
       max-width: 800px;
       margin: auto;
+      text-align: center;
     }
 
     .hero-card .eyebrow {
@@ -60,11 +62,12 @@
 
     .grid-2 {
       grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      margin-top: 1rem;
     }
 
     .grid-2 a {
-      display: inline-block;
-      padding: 10px;
+      display: block;
+      padding: 12px;
       text-align: center;
       border-radius: 5px;
       text-decoration: none;
@@ -72,18 +75,19 @@
       font-weight: bold;
     }
 
-    .grid-2 a:first-child {
-      background-color: #28A745;
-    }
+    /* Button Colours */
+    .grid-2 a:nth-child(1) { background-color: #28A745; } /* Green */
+    .grid-2 a:nth-child(2) { background-color: #007BFF; } /* Blue */
+    .grid-2 a:nth-child(3) { background-color: #FF9800; } /* Orange */
+    .grid-2 a:nth-child(4) { background-color: #6A1B9A; } /* Purple */
+    .grid-2 a:nth-child(5) { background-color: #009688; } /* Teal */
 
-    .grid-2 a:last-child {
-      background-color: #007BFF;
-    }
-
-    main {
-      padding: 2rem;
-      max-width: 900px;
-      margin: auto;
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 2rem auto;
+      border-radius: 10px;
     }
 
     footer {
@@ -102,14 +106,6 @@
     footer a:hover {
       text-decoration: underline;
     }
-
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 2rem auto;
-      border-radius: 10px;
-    }
   </style>
 </head>
 <body>
@@ -120,8 +116,11 @@
       <span aria-hidden="true" class="dot">●</span> Inclusivity in Sport
     </div>
     <div>
-      <a href="implementations.html">Implementations</a>
-      <a href="costings.html">Costings</a>
+      implementations.htmlImplementations</a>
+      costings.htmlCostings</a>
+      Inclusion_and_Policy.htmlPolicy Context</a>
+      Logic_Model_Table.htmlLogic Model</a>
+      Monitoring_Evaluation_Framework.htmlMonitoring & Evaluation</a>
     </div>
   </nav>
 
@@ -135,108 +134,34 @@
         Identifying barriers and showcasing strategies that respect faith, modesty,
         and community while increasing access and agency.
       </p>
+      <!-- Buttons -->
       <div aria-label="Quick links" class="grid grid-2" role="group">
-        <a href="implementations.html">View Implementations →</a>
-        <a href="costings.html">See Costings →</a>
+        implementations.htmlView Implementations →</a>
+        costings.htmlSee Costings →</a>
+        Inclusion_and_Policy.htmlPolicy Context →</a>
+        Logic_Model_Table.htmlLogic Model →</a>
+        Monitoring_Evaluation_Framework.htmlMonitoring & Evaluation →</a>
       </div>
     </div>
     <figure class="hero-media">
-      <img src="images/boxing-group.jpg" alt="A group of Muslim women training in a boxing class, demonstrating inclusive sporting practice.">
+      images/boxing-group.jpg
     </figure>
   </section>
 
-  <!-- Main Content -->
-  <main id="main">
-    <section aria-labelledby="intro">
-      <h2 id="intro">Introduction &amp; Aims</h2>
-      <p>
-        This project explores how religious beliefs, particularly within Islam, influence participation in sports.
-        It aims to identify barriers and propose inclusive strategies that respect religious values while promoting
-        active engagement.
-      </p>
-    </section>
-
-    <section aria-labelledby="context">
-      <h2 id="context">Context</h2>
-      <ul>
-        <li>Modesty requirements (e.g., hijab, long sleeves)</li>
-        <li>Gender segregation in physical activities</li>
-        <li>Lack of representation (few Muslim female coaches)</li>
-        <li><strong>Example:</strong> <em>Muslim Women Boxing Initiative</em> – empowering Muslim women through culturally sensitive boxing programs</li>
-      </ul>
-    </section>
-
-    <section aria-labelledby="critical">
-      <h2 id="critical">Critical Theory and Sport</h2>
-      <p>
-        Critical theory helps examine power structures and cultural norms in sport. It promotes
-        <strong>agency</strong>—the ability to act independently and make choices—especially for marginalized groups.
-      </p>
-      <ul>
-        <li>Challenges dominant ideologies</li>
-        <li>Focuses on empowerment and cultural transformation</li>
-        <li>More agency-oriented than functionalism or conflict theory</li>
-      </ul>
-    </section>
-
-    <section aria-labelledby="agency">
-      <h2 id="agency">Agency</h2>
-      <p>Agency refers to the capacity of individuals to act independently. In sport, it means:</p>
-      <ul>
-        <li>Muslim women choosing to participate despite societal pressures</li>
-        <li>Creating inclusive spaces and programs</li>
-        <li>Having Muslim female coaches who advocate for their communities</li>
-      </ul>
-    </section>
-
-    <section aria-labelledby="tenets">
-      <h2 id="tenets">Major Tenets of Critical Theory in Sport</h2>
-      <ul>
-        <li>Power and inequality in sport</li>
-        <li>Cultural hegemony and marginalization</li>
-        <li>Resistance and social change</li>
-        <li>Sport as a space for identity and interaction</li>
-      </ul>
-    </section>
-
-    <section aria-labelledby="beyond">
-      <h2 id="beyond">Beyond Exploitation</h2>
-      <p>
-        Critical theory moves beyond seeing athletes as exploited labor. It views sport as a site for resistance,
-        expression, and transformation.
-      </p>
-    </section>
-
-    <section aria-labelledby="culture">
-      <h2 id="culture">Shaped by Interactions / Shaping Wider Culture</h2>
-      <p>
-        Sport is both influenced by and influences culture. Inclusive practices can reshape societal views on
-        Muslim women in sport.
-      </p>
-    </section>
-
-    <section aria-labelledby="change">
-      <h2 id="change">Potential for Change</h2>
-      <ul>
-        <li>Policy reforms (e.g., allowing religious attire)</li>
-        <li>Community initiatives (e.g., boxing programs)</li>
-        <li>Representation and leadership (e.g., Muslim female coaches)</li>
-      </ul>
-    </section>
-  </main>
-
   <!-- Footer -->
   <footer>
-    <p class="note">
-      © <span id="year"></span> Inclusivity in Sport • Built by Hamzah Khan
-      • <a href="implementations.html">Implementations</a>
-      • <a href="costings.html">Costings</a>
+    <p>
+      © <span id="year"></span> Inclusivity in Sport • Built by Hamzah Khan |
+      implementations.htmlImplementations</a> |
+      costings.htmlCostings</a> |
+      Inclusion_and_Policy.htmlPolicy Context</a> |
+      Logic_Model_Table.htmlLogic Model</a> |
+      Monitoring_Evaluation_Framework.htmlMonitoring & Evaluation</a>
     </p>
   </footer>
 
   <script>
-    // Dynamically set current year
     document.getElementById('year').textContent = new Date().getFullYear();
   </script>
 </body>
-</html>Inclusion_and_Policy.htmlLogic_Model_Table.htmlMonitoring_Evaluation_Frameworkso the user can click on a button with the names  to access that webpage
+</html>
