--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
     .hero-card {
       max-width: 800px;
       margin: auto;
-      text-align: center;
     }
 
     .hero-card .eyebrow {
@@ -62,12 +61,11 @@
 
     .grid-2 {
       grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      margin-top: 1rem;
     }
 
     .grid-2 a {
-      display: block;
-      padding: 12px;
+      display: inline-block;
+      padding: 10px;
       text-align: center;
       border-radius: 5px;
       text-decoration: none;
@@ -75,93 +73,13 @@
       font-weight: bold;
     }
 
-    /* Button Colours */
-    .grid-2 a:nth-child(1) { background-color: #28A745; } /* Green */
-    .grid-2 a:nth-child(2) { background-color: #007BFF; } /* Blue */
-    .grid-2 a:nth-child(3) { background-color: #FF9800; } /* Orange */
-    .grid-2 a:nth-child(4) { background-color: #6A1B9A; } /* Purple */
-    .grid-2 a:nth-child(5) { background-color: #009688; } /* Teal */
-
-    img {
-      max-width: 100%;
-      height: auto;
-      display: block;
-      margin: 2rem auto;
-      border-radius: 10px;
+    .grid-2 a:first-child {
+      background-color: #28A745;
     }
 
-    footer {
-      background-color: #222;
-      color: white;
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.9rem;
+    .grid-2 a:last-child {
+      background-color: #007BFF;
     }
 
-    footer a {
-      color: #4FC3F7;
-      text-decoration: none;
-    }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
-
-  <!-- Navigation -->
-  <nav aria-label="Primary" class="nav">
-    <div class="brand">
-      <span aria-hidden="true" class="dot">●</span> Inclusivity in Sport
-    </div>
-    <div>
-      implementations.htmlImplementations</a>
-      costings.htmlCostings</a>
-      Inclusion_and_Policy.htmlPolicy Context</a>
-      Logic_Model_Table.htmlLogic Model</a>
-      Monitoring_Evaluation_Framework.htmlMonitoring & Evaluation</a>
-    </div>
-  </nav>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-card">
-      <span class="eyebrow">Project focus • Inclusivity</span>
-      <h1>How religious beliefs affect sport participation — and how to make sport more inclusive</h1>
-      <p class="lead">
-        Exploring how beliefs—particularly within Islam—shape participation in sport.
-        Identifying barriers and showcasing strategies that respect faith, modesty,
-        and community while increasing access and agency.
-      </p>
-      <!-- Buttons -->
-      <div aria-label="Quick links" class="grid grid-2" role="group">
-        implementations.htmlView Implementations →</a>
-        costings.htmlSee Costings →</a>
-        Inclusion_and_Policy.htmlPolicy Context →</a>
-        Logic_Model_Table.htmlLogic Model →</a>
-        Monitoring_Evaluation_Framework.htmlMonitoring & Evaluation →</a>
-      </div>
-    </div>
-    <figure class="hero-media">
-      images/boxing-group.jpg
-    </figure>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>
-      © <span id="year"></span> Inclusivity in Sport • Built by Hamzah Khan |
-      implementations.htmlImplementations</a> |
-      costings.htmlCostings</a> |
-      Inclusion_and_Policy.htmlPolicy Context</a> |
-      Logic_Model_Table.htmlLogic Model</a> |
-      Monitoring_Evaluation_Framework.htmlMonitoring & Evaluation</a>
-    </p>
-  </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
-</html>
+    main {
+      padding: 2rem;
